# kitcc-library

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
kitcc_library/: __init__.py  auth.py  book.py  db.py  lend_and_return.py  schema.sql
kitcc_library/static/: style.css
kitcc_library/static/css/: modal.css  pagination.css  style.css
kitcc_library/static/js/: modal.js
kitcc_library/templates/: base.html
kitcc_library/templates/auth/: index.html  register.html
kitcc_library/templates/book/: create.html  index.html  lend.html  register.html  return.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_book.py  test_db.py  test_factory.py
