[tool.poetry]
name = "kitcc-library"
version = "0.1.0"
description = ""
authors = ["Shunsei"]
readme = "README.md"
packages = [{include = "kitcc_library"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
