[tool.poetry]
name = "kitcc-library"
version = "0.1.0"
description = ""
authors = ["shunsei", "pentagon"]
readme = "README.md"
packages = [{include = "kitcc_library"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
requests = "^2.28.2"
flask-paginate = "^2022.1.8"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
